# visionspace-assignment

./: .env.example  .gitignore  ARCHITECTURE.md  ASSIGNMENT_PLAN.md  README.md  REPORT.md  RETROSPECTIVE.md  pyproject.toml
configs/: models.yaml
constraints/: gb10-cu130.txt
data/prompts/: industrial_assets.jsonl
data/scene_cases/: text_to_scene_cases.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/track1/: page.tsx
frontend/app/track3/: page.tsx
frontend/components/: metric-grid.tsx  model-preview.tsx  track-shell.tsx  track1-asset-foundry.tsx  track3-scene-mini.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/lib/: api.ts  types.ts
outputs/samples/: agv-triposr.glb  conveyor-triposr.glb  robot_arm-triposr.glb
outputs/samples/metrics/: agv-hunyuan3d-2mini.json  agv-triposr.json  robot_arm-triposr.json
scripts/: download_model_weights.py  generate_reference_images.py  setup_model_envs.py  setup_model_repos.py
src/visionspace_asset_foundry/: __init__.py  api.py  cli.py  environment.py  jobs.py  paths.py  prompts.py  scene_interpreter.py  scene_llm.py  scene_parser.py  schemas.py
src/visionspace_asset_foundry/models/: __init__.py  base.py  hunyuan.py  registry.py  triposr.py
src/visionspace_asset_foundry/postprocess/: __init__.py  inspect_mesh.py  normalize.py
tests/: test_postprocess.py  test_scene_parser.py
