[project]
name = "visionspace-asset-foundry"
version = "0.1.0"
description = "Industrial Text/Image-to-3D asset generation pipeline for VisionSpace assignment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "numpy>=1.26.0",
  "openai>=2.38.0",
  "pillow>=10.4.0",
  "psutil>=6.0.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.0",
  "rich>=13.7.0",
  "trimesh>=4.4.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
models = [
  "accelerate>=1.0.0",
  "diffusers>=0.31.0",
  "huggingface-hub>=0.26.0",
  "safetensors>=0.4.5",
  "transformers>=4.46.0",
]
mesh = [
  "pymeshlab>=2023.12.post2",
]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.7.0",
]

[project.scripts]
vsaf = "visionspace_asset_foundry.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visionspace_asset_foundry"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".venv",
  "frontend",
  "models/repos",
  "models/envs",
  "models/cache",
  "outputs",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
